--- a/app/src/main/res/layout/activity_idiom_content.xml
+++ b/app/src/main/res/layout/activity_idiom_content.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/collect_idiom"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:id="@+id/content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
