--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="classic_gray">#87939A</color>
     <color name="rou">#DDDDCC</color>
     <color name="theme_white">#F7F7EF</color>
+    <color name="font_black">#383030</color>
 </resources>
