--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -13,7 +13,13 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            app:tabTextAppearance="@style/tabText"
+            app:tabRippleColor="@color/white"
+            app:tabTextColor="#513736"
+            app:tabSelectedTextColor="@color/rou"
+            app:tabIndicatorColor="@color/rou"/>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
