--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/idiom"
+            android:id="@+id/idiom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
