完成页面设计

--- a/app/src/main/res/layout/fragement_user.xml
+++ b/app/src/main/res/layout/fragement_user.xml
@@ -37,6 +37,7 @@
             </com.xuexiang.xui.widget.textview.supertextview.SuperTextView>
 
             <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
+                android:id="@+id/star_idiom_list"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
