--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="rou">#DDDDCC</color>
     <color name="theme_white">#F7F7EF</color>
     <color name="font_black">#383030</color>
+    <color name="green">#309146</color>
 </resources>
