--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <com.google.android.material.appbar.AppBarLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:theme="@style/AppTheme.AppBarOverlay">-->
+        <!--        <com.google.android.material.appbar.AppBarLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:theme="@style/AppTheme.AppBarOverlay">-->
 
-<!--            <androidx.appcompat.widget.Toolbar-->
-<!--                style="@style/AppTheme.PopupOverlay"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:title="橙语"-->
-<!--                app:logo="@drawable/ic_orange"-->
-<!--                app:titleTextColor="@color/rou" />-->
+        <!--            <androidx.appcompat.widget.Toolbar-->
+        <!--                style="@style/AppTheme.PopupOverlay"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                app:title="橙语"-->
+        <!--                app:logo="@drawable/ic_orange"-->
+        <!--                app:titleTextColor="@color/rou" />-->
 
-<!--        </com.google.android.material.appbar.AppBarLayout>-->
+        <!--        </com.google.android.material.appbar.AppBarLayout>-->
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/rou"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation_bottom" />
 
     <!--    <androidx.core.widget.NestedScrollView-->
