--- a/app/src/main/res/layout/button_list.xml
+++ b/app/src/main/res/layout/button_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center">
 
     <Button
@@ -16,25 +16,33 @@
         android:background="@drawable/white_background"/>
 
     <Button
+        android:id="@+id/btn2"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@color/black"
+        android:textSize="18dp"
         android:background="@drawable/white_background"/>
 
     <Button
+        android:id="@+id/btn3"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        app:rb_radius="20dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@color/black"
+        android:textSize="18dp"
         android:background="@drawable/white_background"/>
 
     <Button
+        android:id="@+id/btn4"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@color/black"
+        android:textSize="18dp"
         android:background="@drawable/white_background"/>
 
 </LinearLayout>
