--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,28 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".GameFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tab_layout1"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.Toolbar
+            style="@style/AppTheme.PopupOverlay"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            app:tabTextAppearance="@style/tabText"
-            app:tabRippleColor="@color/white"
-            app:tabTextColor="#513736"
-            app:tabSelectedTextColor="@color/rou"
-            app:tabIndicatorColor="@color/rou"/>
+            app:title="趣橙"
+            app:titleTextColor="@color/rou" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager1"
+    <TextView
+        android:id="@+id/chain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="成语接龙"
+        android:textSize="50sp"
+        android:textAlignment="center"
+        android:fontFamily="@font/stxingka"
+        android:background="@drawable/white_background" />
 
 </LinearLayout>
