--- a/app/src/main/res/layout/fragment_pattern.xml
+++ b/app/src/main/res/layout/fragment_pattern.xml
@@ -8,17 +8,26 @@
     android:background="@drawable/ink"
     tools:context=".PatternFragment">
 
-    <include layout="@layout/text_line"
+<!--    <include layout="@layout/text_line"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:layout_marginTop="60dp"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        android:layout_weight="1"-->
+<!--        />-->
+    <TextView
+        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_weight="1"
-        />
+        android:layout_height="wrap_content"
+        android:text="请找出以下成语中形正确的一项"
+        android:fontFamily="@font/stkaiti"
+        android:textSize="20sp"
+        android:textAlignment="center"
+         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_weight="3">
         <include layout="@layout/button_list"
             android:layout_width="match_parent"
@@ -29,10 +38,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_weight="1">
         <TextView
+            android:id="@+id/text_explain"
             android:layout_width="match_parent"
+            android:fontFamily="@font/stkaiti"
+            android:textSize="16sp"
+            android:textAlignment="center"
             android:layout_height="60dp" />
+        <LinearLayout
+            android:id="@+id/next_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end">
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="下一题"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/icon_arrow_right_grey" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
