--- a/app/src/main/res/layout/recycle_idiom_item.xml
+++ b/app/src/main/res/layout/recycle_idiom_item.xml
@@ -5,38 +5,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:maxHeight="50dp">
-
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/idiom_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:text="成语接龙" />
-
-        <TextView
-            android:id="@+id/pinyin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="[ tān shēng pà sǐ ]"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/shiyi"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="贪恋生存，害怕死亡。" />
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/idiom_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="成语接龙" />
+
+                <TextView
+                    android:id="@+id/pinyin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="[ tān shēng pà sǐ ]"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/shiyi"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="贪恋生存，害怕死亡。" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/remove_btn"
+            android:layout_gravity="center"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_star_fill"
+            android:layout_marginEnd="10dp"/>
+
+    </LinearLayout>
+
+
 
     <View
         android:layout_width="match_parent"
