--- a/app/src/main/res/layout/activity_chain.xml
+++ b/app/src/main/res/layout/activity_chain.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/theme_white"
+    android:background="@drawable/background_ink1"
     tools:context=".ChainActivity">
 
     <androidx.appcompat.widget.Toolbar
