--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/background_ink2"
     tools:context=".GameFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -26,9 +27,11 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
         android:text="成语接龙"
-        android:textSize="50sp"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:gravity="center"
         android:textAlignment="center"
-        android:fontFamily="@font/stxingka"
-        android:background="@drawable/white_background" />
+        android:fontFamily="@font/stxinwei"
+        android:background="#BCBC91" />
 
 </LinearLayout>
