更改成语展示内容

--- a/app/src/main/res/layout/activity_chain.xml
+++ b/app/src/main/res/layout/activity_chain.xml
@@ -58,7 +58,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/grid_text"
-                android:text="一"
+                android:text="贪"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
@@ -71,7 +71,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/grid_text"
-                android:text="夫"
+                android:text="生"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
@@ -84,7 +84,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/grid_text"
-                android:text="当"
+                android:text="怕"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
@@ -96,7 +96,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/grid_text"
-                android:text="关"
+                android:text="死"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
