启动界面设计以及查询功能完善

--- a/app/src/main/res/layout/text_line.xml
+++ b/app/src/main/res/layout/text_line.xml
@@ -11,7 +11,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/grid_text"
-        android:text="贪"
+        android:text="一"
         android:fontFamily="@font/stxinwei"
         android:textSize="35sp"
         android:textColor="@color/font_black"
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/grid_text"
-        android:text="生"
+        android:text="壶"
         android:fontFamily="@font/stxinwei"
         android:textSize="35sp"
         android:textColor="@color/font_black"
@@ -37,7 +37,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/grid_text"
-        android:text="怕"
+        android:text="千"
         android:fontFamily="@font/stxinwei"
         android:textSize="35sp"
         android:textColor="@color/font_black"
@@ -49,7 +49,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/grid_text"
-        android:text="死"
+        android:text="金"
         android:fontFamily="@font/stxinwei"
         android:textSize="35sp"
         android:textColor="@color/font_black"
