--- a/app/src/main/res/layout/activity_chain.xml
+++ b/app/src/main/res/layout/activity_chain.xml
@@ -58,7 +58,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/grid_text"
-                android:text="贪"
+                android:text="一"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
@@ -71,7 +71,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/grid_text"
-                android:text="生"
+                android:text="壶"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
@@ -84,7 +84,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/grid_text"
-                android:text="怕"
+                android:text="千"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
@@ -96,7 +96,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/grid_text"
-                android:text="死"
+                android:text="金"
                 android:fontFamily="@font/stxinwei"
                 android:textSize="35sp"
                 android:textColor="@color/font_black"
