--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -34,4 +34,32 @@
         android:fontFamily="@font/stxinwei"
         android:background="#BCBC91" />
 
+    <TextView
+        android:id="@+id/chain_reverse"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="逆向接龙"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:fontFamily="@font/stxinwei"
+        android:background="#AA6765" />
+
+    <TextView
+        android:id="@+id/find_idiom"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="慧眼识珠"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:fontFamily="@font/stxinwei"
+        android:background="#5E4D77" />
+
 </LinearLayout>
