--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="theme_white">#F7F7EF</color>
     <color name="font_black">#383030</color>
     <color name="green">#309146</color>
+    <color name="app_name">#935638</color>
 </resources>
