--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/linear_background"
     tools:context=".FindActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -20,8 +21,7 @@
                 android:id="@+id/back_func"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_arrow_left"
-                />
+                android:src="@drawable/ic_arrow_left" />
             <TextView
                 android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
@@ -35,6 +35,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
+        android:id="@+id/result_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp">
@@ -49,9 +50,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:orientation="vertical">
-        <include layout="@layout/layout_choose_text" />
-        <include layout="@layout/layout_choose_text" />
-        <include layout="@layout/layout_choose_text" />
         <include layout="@layout/layout_choose_text" />
     </LinearLayout>
 
