--- a/app/src/main/res/layout/fragement_home.xml
+++ b/app/src/main/res/layout/fragement_home.xml
@@ -19,7 +19,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:title="橙语"
-                app:logo="@drawable/ic_orange"
                 app:titleTextColor="@color/rou" />
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
@@ -47,6 +46,26 @@
 <!--        android:textStyle="bold"-->
 <!--        android:text="今日推荐"/>-->
 
+<!--    <com.xuexiang.xui.widget.progress.CircleProgressView-->
+<!--        android:id="@+id/progressView_circle_small"-->
+<!--        android:layout_width="90dp"-->
+<!--        android:layout_height="90dp"-->
+<!--        android:layout_marginStart="12dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        app:cpv_animate_type="AccelerateDecelerateInterpolator"-->
+<!--        app:cpv_circle_broken="false"-->
+<!--        app:cpv_end_color="#00EEFA"-->
+<!--        app:cpv_end_progress="78"-->
+<!--        app:cpv_isFilled="false"-->
+<!--        app:cpv_isTracked="true"-->
+<!--        app:cpv_progress_duration="2000"-->
+<!--        app:cpv_progress_textColor="#28AAFB"-->
+<!--        app:cpv_progress_textSize="18sp"-->
+<!--        app:cpv_start_color="#0052a3"-->
+<!--        app:cpv_start_progress="0"-->
+<!--        app:cpv_track_color="#22FFF5"-->
+<!--        app:cpv_track_width="4dp"-->
+<!--        app:cpv_progress_width="8dp"/>-->
 
     <LinearLayout
         android:orientation="vertical"
