--- a/app/src/main/res/layout/fragement_user.xml
+++ b/app/src/main/res/layout/fragement_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/linear_background"
-    tools:context=".UserActivity">
+    tools:context=".UserFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
