--- a/app/src/main/res/layout/layout_choose_text.xml
+++ b/app/src/main/res/layout/layout_choose_text.xml
@@ -10,21 +10,153 @@
         android:orientation="horizontal"
         android:gravity="center">
         <TextView
+            android:id="@+id/item1"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
             android:background="@drawable/background_choose_text"/>
         <TextView
+            android:id="@+id/item2"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
             android:background="@drawable/background_choose_text"/>
         <TextView
+            android:id="@+id/item3"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
             android:background="@drawable/background_choose_text"/>
         <TextView
+            android:id="@+id/item4"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/item5"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item6"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item7"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item8"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/item9"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item10"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item11"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item12"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/item13"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item14"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item15"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:background="@drawable/background_choose_text"/>
+        <TextView
+            android:id="@+id/item16"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:fontFamily="@font/stxingka"
+            android:textSize="40sp"
+            android:gravity="center"
             android:background="@drawable/background_choose_text"/>
     </LinearLayout>
 
