--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -7,29 +7,44 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="10dp"
-        android:layout_gravity="center"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/idiom_text"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/collect"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_star"
-            android:onClick="collect"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/idiom_text"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <Button
+                android:id="@+id/collect"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/ic_star"
+                android:layout_gravity="end|center_vertical"
+                android:onClick="collect"/>
+        </LinearLayout>
     </LinearLayout>
     <TextView
         android:id="@+id/explanation"
-        android:layout_marginStart="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
         android:textSize="12sp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
