--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="font_black">#383030</color>
     <color name="green">#309146</color>
     <color name="app_name">#935638</color>
+    <color name="transform">#00000000</color>
 </resources>
