修复了ViewPager的bug，制作了AppIcon

--- a/app/src/main/res/layout/activity_chain.xml
+++ b/app/src/main/res/layout/activity_chain.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/background_ink1"
-    tools:context=".ChainActivity">
+    tools:context=".home.fragment.game.ChainActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
