--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".LoginActivity">
+    tools:context=".init.LoginActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="120dp"
@@ -43,12 +43,11 @@
                 app:srcCompat="@drawable/ic_login_user" />
 
             <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
-                android:id="@+id/et_phone_number"
+                android:id="@+id/et_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
                 android:hint="用户名"
-                android:inputType="number"
                 app:met_clearButton="true"
                 app:met_errorMessage="无效的用户名"
                 app:met_floatingLabel="normal"
@@ -70,17 +69,15 @@
                 app:srcCompat="@drawable/ic_password" />
 
             <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
-                android:id="@+id/et_verify_code"
+                android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:hint="密码(8-15位)"
-                android:inputType="number"
+                android:hint="密码"
                 app:met_clearButton="false"
                 app:met_errorMessage="密码错误或不符合规范"
                 app:met_floatingLabel="normal"
                 app:met_floatingLabelText="密码"
-                app:met_maxCharacters="4"
                 app:met_regexp="^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,15}$" />
 
         </FrameLayout>
