--- a/app/src/main/res/drawable/background_red.xml
+++ b/app/src/main/res/drawable/background_red.xml
@@ -12,7 +12,7 @@
         android:right="1dp"
         android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#BF5454"/>
+            <solid android:color="#8ABF5454"/>
             <corners android:radius="10dp" />
         </shape>
     </item>
