--- a/app/src/main/res/drawable/ic_orange.xml
+++ b/app/src/main/res/drawable/ic_orange.xml
@@ -1,18 +1,9 @@
-<vector android:height="50dp" android:viewportHeight="1024"
-    android:viewportWidth="1024" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#F77F34" android:pathData="M515.2,515.2m-413,0a413,413 0,1 0,826 0,413 413,0 1,0 -826,0Z"/>
-    <path android:fillColor="#F9A13D" android:pathData="M515.2,515.2m-371.1,0a371.1,371.1 0,1 0,742.2 0,371.1 371.1,0 1,0 -742.2,0Z"/>
-    <path android:fillColor="#FBD1B7" android:pathData="M515.2,515.2m-301.6,0a301.6,301.6 0,1 0,603.2 0,301.6 301.6,0 1,0 -603.2,0Z"/>
-    <path android:fillColor="#FB7430" android:pathData="M451.1,262.4l118.2,-5.2c2.3,-0.1 4.1,2 3.6,4.3l-56.3,252.3c-0.3,1.2 -2,1.2 -2.3,0l-66.4,-247c-0.6,-2.1 1,-4.3 3.2,-4.4z"/>
-    <path android:fillColor="#FB7430" android:pathData="M333.3,328.3l99.7,-63.6c2,-1.3 4.6,-0.3 5.3,1.9l77.4,246.6c0.4,1.2 -1.1,2.1 -2,1.2l-181,-180.7c-1.6,-1.5 -1.3,-4.1 0.6,-5.4z"/>
-    <path android:fillColor="#FB7430" android:pathData="M264.3,444.3l54.6,-104.9c1.1,-2.1 3.8,-2.5 5.5,-1l190.3,174.9c0.9,0.8 0.1,2.3 -1.1,2l-247.1,-66c-2.2,-0.5 -3.3,-3 -2.2,-5z"/>
-    <path android:fillColor="#FB7430" android:pathData="M262.4,579.3l-5.2,-118.2c-0.1,-2.3 2,-4.1 4.3,-3.6l252.3,56.3c1.2,0.3 1.2,2 0,2.3l-247,66.4c-2.1,0.6 -4.3,-1 -4.4,-3.2z"/>
-    <path android:fillColor="#FB7430" android:pathData="M328.3,697.1l-63.6,-99.7c-1.3,-2 -0.3,-4.6 1.9,-5.3l246.6,-77.4c1.2,-0.4 2.1,1.1 1.2,2l-180.7,181c-1.5,1.6 -4.1,1.3 -5.4,-0.6z"/>
-    <path android:fillColor="#FB7430" android:pathData="M444.3,766.1l-104.9,-54.6c-2.1,-1.1 -2.5,-3.8 -1,-5.5l174.9,-190.3c0.8,-0.9 2.3,-0.1 2,1.1l-66,247.1c-0.5,2.2 -3,3.3 -5,2.2z"/>
-    <path android:fillColor="#FB7430" android:pathData="M579.3,768l-118.2,5.2c-2.3,0.1 -4.1,-2 -3.6,-4.3l56.3,-252.3c0.3,-1.2 2,-1.2 2.3,0l66.4,247c0.6,2.1 -1,4.3 -3.2,4.4z"/>
-    <path android:fillColor="#FB7430" android:pathData="M697.1,702.1l-99.7,63.6c-2,1.3 -4.6,0.3 -5.3,-1.9l-77.4,-246.6c-0.4,-1.2 1.1,-2.1 2,-1.2l181,180.7c1.6,1.5 1.3,4.2 -0.6,5.4z"/>
-    <path android:fillColor="#FB7430" android:pathData="M766.1,586.1L711.5,691c-1.1,2.1 -3.8,2.5 -5.5,1L515.7,517.1c-0.9,-0.8 -0.1,-2.3 1.1,-2l247.1,66c2.2,0.5 3.3,3 2.2,5z"/>
-    <path android:fillColor="#FB7430" android:pathData="M768,451.1l5.2,118.2c0.1,2.3 -2,4.1 -4.3,3.6l-252.3,-56.3c-1.2,-0.3 -1.2,-2 0,-2.3l247,-66.4c2.1,-0.6 4.3,1 4.4,3.2z"/>
-    <path android:fillColor="#FB7430" android:pathData="M702.1,333.3l63.6,99.7c1.3,2 0.3,4.6 -1.9,5.3l-246.6,77.4c-1.2,0.4 -2.1,-1.1 -1.2,-2l180.7,-181c1.5,-1.6 4.2,-1.3 5.4,0.6z"/>
-    <path android:fillColor="#FB7430" android:pathData="M586.1,264.3L691,318.9c2.1,1.1 2.5,3.8 1,5.5L517.1,514.7c-0.8,0.9 -2.3,0.1 -2,-1.1l66,-247.1c0.5,-2.2 3,-3.3 5,-2.2z"/>
+
+<vector android:height="30dp" android:viewportHeight="1024"
+    android:viewportWidth="1024" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillColor="@color/black">
+    <path android:fillColor="#FF8040" android:pathData="M511.97,273.96C304.86,273.96 136.96,441.86 136.96,648.99s167.9,375.01 375.01,375.01S887,856.1 887,648.99s-167.9,-375.03 -375.03,-375.03zM511.97,968.2L511.97,330.54c176.07,0 318.8,142.73 318.8,318.8s-142.73,318.8 -318.8,318.8z"/>
+    <path android:fillColor="#FF8040" android:pathData="M635.13,496.83c11.06,-31.58 -0.95,-64.53 -26.81,-73.58s-55.79,9.24 -66.85,40.81 -4.62,163.31 -4.62,163.31 87.23,-98.96 98.28,-130.54zM731.1,591.18c-41.38,0 -173.02,67.72 -173.02,67.72s131.64,67.74 173.02,67.74 63.12,-30.32 63.12,-67.72 -21.78,-67.74 -63.12,-67.74zM538.45,691.24s-8.25,127.09 2.31,157.43 40.14,47.6 66.01,38.57 38.27,-40.95 27.71,-71.27 -96.03,-124.73 -96.03,-124.73z"/>
+    <path android:fillColor="#FFC107" android:pathData="M512.56,261.87L304.19,0.52s-32.92,121.93 24.61,194.11 183.76,67.24 183.76,67.24zM565.87,116.08c-47.15,50.81 -29.4,143.92 -29.4,143.92L707.21,76.15s-94.2,-10.83 -141.34,39.93z"/>
+    <path android:fillColor="#FF8040" android:pathData="M512.68,261.41c2.08,-8.03 30.79,-124.01 -24.74,-193.66C430.4,-4.41 304.19,0.52 304.19,0.52zM677.81,220.05c47.15,-50.81 29.4,-143.91 29.4,-143.91L536.47,260s94.2,10.82 141.34,-39.94z"/>
 </vector>
