--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LaunchActivity">
+    tools:context=".init.LaunchActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
