--- a/app/src/main/res/layout/activity_reverse_chain.xml
+++ b/app/src/main/res/layout/activity_reverse_chain.xml
@@ -1,9 +1,281 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReverseChainActivity">
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@drawable/background_ink1"
+    tools:context=".home.fragment.game.ReverseChainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/xui_actionbar_height"
+        android:background="@color/brown"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="10dp">
+            <com.xuexiang.xui.widget.alpha.XUIAlphaImageView
+                android:id="@+id/back_func"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_arrow_left"
+                />
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:textColor="@color/rou"
+                android:text="逆向接龙"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/time_layout"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_weight="1">
+            <com.xuexiang.xui.widget.progress.CircleProgressView
+                android:id="@+id/progressView_circle_small"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                app:cpv_progress_textVisibility="false"
+                app:cpv_animate_type="AccelerateDecelerateInterpolator"
+                app:cpv_circle_broken="false"
+                app:cpv_start_color="@color/app_name"
+                app:cpv_end_progress="0"
+                app:cpv_isFilled="true"
+                app:cpv_isTracked="true"
+                app:cpv_progress_duration="60000"
+                app:cpv_progress_textColor="#28AAFB"
+                app:cpv_progress_textSize="18sp"
+                app:cpv_end_color="#19AA6E5B"
+                app:cpv_start_progress="100"
+                app:cpv_track_color="#009C6B53"
+                app:cpv_track_width="4dp"
+                app:cpv_progress_width="8dp" />
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="30sp"
+                android:textColor="@color/brown"
+                android:fontFamily="@font/stxingka"
+                android:text="60"/>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="25sp"
+            android:fontFamily="@font/stxingka"
+            android:text="分数："/>
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:textSize="25sp"
+            android:fontFamily="@font/stxingka"
+            android:text="0"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/start_game"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/stxingka"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:layout_marginTop="100dp"
+        android:text="开始游戏"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="8"
+        android:gravity="center">
+        <LinearLayout
+            android:id="@+id/layout1"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="popup"
+            android:layout_marginBottom="90dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/grid_text"
+                android:text="一"
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/grid_text"
+                android:text="壶"
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/text3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/grid_text"
+                android:text="千"
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/text4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/grid_text"
+                android:text="金"
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:visibility="gone"
+            android:background="@drawable/custom_line" />
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:visibility="gone"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/layout2"
+            android:layout_marginTop="90dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/text5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/grid_text"
+                android:text=""
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/text6"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/grid_text"
+                android:text=""
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/text7"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/grid_text"
+                android:text=""
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/text8"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/grid_text"
+                android:text=""
+                android:fontFamily="@font/stxinwei"
+                android:textSize="35sp"
+                android:textColor="@color/font_black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/input_text"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_weight="1"
+        >
+
+
+        <com.xuexiang.xui.widget.edittext.ValidatorEditText
+            style="@style/EditText.Normal"
+            android:id="@+id/input"
+            android:layout_width="300dp"
+            android:background="@drawable/border_edittext"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            android:text="接龙"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:onClick="chain"/>
+    </LinearLayout>
+
+
+
+</LinearLayout>
