--- a/app/src/main/res/layout/activity_star_item.xml
+++ b/app/src/main/res/layout/activity_star_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/theme_white"
     android:orientation="vertical"
-    tools:context=".StarIdiomFragment">
+    tools:context=".idiom.StarItemActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
