--- a/app/src/main/res/layout/fragement_user.xml
+++ b/app/src/main/res/layout/fragement_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/linear_background"
-    tools:context=".UserFragment">
+    tools:context=".home.fragment.UserFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -17,6 +17,7 @@
             android:orientation="vertical">
 
             <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 app:sCenterLines="1"
