--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/background_ink2"
-    tools:context=".GameFragment">
+    tools:context=".home.fragment.GameFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
